decoupled project into modules